force-app/main/default/objects/Qst_Survey__c/Qst_Survey__c.object-meta.xml
<CustomObject>
    <description>This is a master Survey Custom Object.</description>
    <label>Qst_Survey</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Custom Object Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qst_Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>