force-app/main/default/objects/Qst_Survey__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default survey</description>
    <inlineHelpText>Default survey</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>