force-app/main/default/objects/Qst_Survey__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional describe purpose of this survey</description>
    <inlineHelpText>Optional describe purpose of this survey</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>