force-app/main/default/objects/Qst_Survey__c/fields/Survey_Text_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Text_Name__c</fullName>
    <description>Survey name label</description>
    <inlineHelpText>Survey name label</inlineHelpText>
    <label>Survey Text Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>